# rttp

./: LICENSE  README.md  lint.sh  pyproject.toml  setup.cfg
.github/workflows/: release.yml  test.yml
doc/: specification.md
rttptool/: cli.py  discovery.py  exception.py
templtest/: __main__.py  cli.py  discovery.py  exception.py  template.py  test.py
tests/: __init__.py  cli_test.py  conftest.py  discovery_test.py  template_test.py  test_test.py  util.py
tests/data/invalid_meta/invalid_version_type/: meta.yml
tests/data/invalid_meta/invalid_version_value/: meta.yml
tests/data/invalid_meta/invalid_yaml/: meta.yml
tests/data/invalid_meta/not_dictionary/: meta.yml
tests/data/roles/ansible_filter/defaults/: main.yml
tests/data/roles/ansible_filter/templates/: foo.j2
tests/data/roles/ansible_filter/templates_tests/: test.yml
tests/data/roles/invalid_path_in_test_definition/templates_tests/: test.yml
tests/data/roles/with_defaults_alt_filename_1/templates_tests/: test.yml
tests/data/roles/with_defaults_and_vars/templates_tests/test_extra/: extra.yml
tests/data/roles/with_defaults_and_vars_alt_filename_2/defaults/: main
tests/data/roles/without_variable_definition/templates/: foo.j2
tests/resources/roles/: meta.yml
tests/resources/roles/ansible_filter/templates_tests/: __init__.py
tests/resources/roles/badly_formatted_test_definition/templates_tests/: test.yml
tests/resources/roles/invalid_test_definition/templates_tests/: test.yml
tests/resources/roles/json_template/templates/: foo.json.j2
tests/resources/roles/json_template/templates_tests/: test.yml
tests/resources/roles/test_failure/templates_tests/: test.yml
tests/resources/roles/tests_metadata_error/templates_tests/: test.yml
tests/resources/roles/unsupported_tests_version/templates_tests/: meta.yml
tests/resources/roles/with_defaults_and_vars/templates_tests/: test.yml
tests/resources/roles/with_defaults_and_vars_alt_filename_1/templates_tests/test_vars/: inventory.yml
tests/resources/roles/without_variable_definition/templates_tests/: test.yml
tests/rttptool/cli/: test__parse_args.py  test_main.py
tests/rttptool/discovery/: test_Meta.py  test_TestDefinition.py  test_Variables.py  test__create_path.py  test__iter_testdefs.py  test_discover_tests.py
tests/rttptool/template/: test_TemplateRenderer.py
tests/rttptool/test/: test_Test.py
tests/templtest/cli/: test__parse_args.py  test_main.py
tests/templtest/discovery/: test_Meta.py  test_TestDefinition.py  test_Variables.py  test__create_path.py  test__iter_testdefs.py  test_discover_tests.py
tests/templtest/template/: test_AnsibleTemplateRenderer.py  test_Jinja2TemplateRenderer.py  test_TemplateRenderer.py
tests/templtest/test/: test_Test.py
tests/test_util/: test_TempDirectory.py  test_change_working_directory.py  test_extract_role.py
