[tool.poetry]
name = "templtest"
version = "0.3.1"
description = "A tool for testing Ansible role templates."
authors = ["Alexey Busygin <yaabusygin@gmail.com>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = "^3.7"
ansible-core = [
    { version = "~2.11", python = "~3.7" },
    { version = "~2.13", python = "~3.8" },
    { version = "^2.14", python = "^3.9" }
]
packaging = ">=22,<24"

[tool.poetry.dev-dependencies]
pylint = [
    { version = "~2.13", python = "<3.7.2" },
    { version = "^2.16", python = "^3.7.2" }
]
pydocstyle = "^6.3"
pycodestyle = "^2.10"
mypy = "0.991"

[tool.poetry.scripts]
templtest = 'templtest.cli:main'

[tool.pylint."MESSAGES CONTROL"]
disable = [
    # prefer pycodestyle
    "line-too-long",
    "unnecessary-semicolon",
    "trailing-whitespace",
    "missing-final-newline",
    "bad-indentation",
    "multiple-statements",
    "bare-except",

    # prefer pydocstyle
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",

    # prefer mypy
    "syntax-error",

    # actually disable
    "too-few-public-methods",
    "duplicate-code"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
