[tool.poetry]
name = "templtest"
version = "0.3.1"
description = "A tool for testing Ansible role templates."
authors = ["Alexey Busygin <yaabusygin@gmail.com>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = "^3.7"
ansible-core = [
    { version = "~2.11", python = "~3.7" },
    { version = "~2.13", python = "~3.8" },
    { version = "^2.14", python = "^3.9" }
]
packaging = ">=22,<24"

[tool.poetry.dev-dependencies]
importlib_resources = { version = "^5.7", python = "<3.9" }

# Switch to contextlib2 when backport from Python 3.11 is merged.
# See: https://github.com/jazzband/contextlib2/issues/43
contextlib-chdir = { version = "^1.0", python = "<3.11" }

black = "^23.1"
mypy = "0.991"
types-PyYAML = "^6.0"
pylint = [
    { version = "~2.13", python = "<3.7.2" },
    { version = "^2.16", python = "^3.7.2" }
]
pydocstyle = "^6.3"
pytest = "^7.2"
pytest-black-ng = "~0.4"
pytest-mypy = "~0.10"
pytest-pylint = "~0.19"
pytest-pydocstyle = "^2.3"

[tool.poetry.scripts]
templtest = "templtest.cli:main"

[[tool.mypy.overrides]]
module = "ansible.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "contextlib_chdir"
ignore_missing_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "duplicate-code"
]

[tool.pydocstyle]
ignore = [
    "D1",       # missing docstrings
    "D203",     # 1 blank line required before class docstring
    "D213"      # multi-line docstring summary should start at the second line
]

[tool.pytest.ini_options]
minversion = "7.2"
addopts = [
    "--import-mode=importlib",
    "--black",
    "--mypy",
    "--pylint",
    "--pydocstyle"
]
testpaths = [
    "templtest",
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
